--- a/ngo-main/heart_charity/templates/index.html
+++ b/ngo-main/heart_charity/templates/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Kind Heart Charity - Free Bootstrap 5.2.2 CSS Template</title>
+        <title>Kind Heart Charity</title>
 
         <!-- CSS FILES -->        
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -28,7 +28,7 @@ https://templatemo.com/tm-581-kind-heart-charity
     
     <body id="section_1">
 
-        <header class="site-header">
+        <!-- <header class="site-header">
             <div class="container">
                 <div class="row">
                     
@@ -73,11 +73,11 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                 </div> 
             </div> 
-        </header>
+        </header> -->
 
         <nav class="navbar navbar-expand-lg bg-light shadow-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img src="{% static 'images/logo.png'  %}"  class="logo img-fluid" alt="Kind Heart Charity">
                     <span>
                         Kind Heart Charity
@@ -91,14 +91,10 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link click-scroll" href="#top">Home</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">About</a>
-                        </li>
-
+                        </li> -->
+                        {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="#section_3">Causes</a>
                         </li>
@@ -107,13 +103,25 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <a class="nav-link click-scroll" href="#section_4">Volunteer</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_6">Contact</a>
-                        </li>
-
                         <li class="nav-item ms-3">
                             <a class="nav-link custom-btn custom-border-btn btn" href="#section_3">Donate</a>
                         </li>
+
+                        
+                        {% else %}
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="#section_2">About</a>
+                        </li>
+
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="#section_6">Contact</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'signin' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
+                        {% endif %}
+
                     </ul>
                 </div>
             </div>
