--- a/ngo-main/templates/base.html
+++ b/ngo-main/templates/base.html
@@ -106,6 +106,11 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <li class="nav-item ms-3">
                             <a class="nav-link custom-btn custom-border-btn btn" href="#section_3">Donate</a>
                         </li>
+                        
+                        <li class="nav-item ms-3">
+                            <a class="nav-link custom-btn custom-border-btn btn" href="{% url 'signin' %}">Logout</a>
+                        </li>
+
 
                         
                         {% else %}
@@ -133,52 +138,9 @@ https://templatemo.com/tm-581-kind-heart-charity
                 <div class="container-fluid">
                     <div class="row">
 
-                        <div class="col-lg-12 col-12 p-0">
-                            <div id="hero-slide" class="carousel carousel-fade slide" data-bs-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="{% static 'images/slide/volunteer-helping-with-donation-box.jpg '%} " class="carousel-image img-fluid" alt="...">
-                                        
-                                        <div class="carousel-caption d-flex flex-column justify-content-end">
-                                            <h1>be a Kind Heart</h1>
-                                            
-                                            <p>Professional charity theme based on Bootstrap 5.2.2</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="carousel-item">
-                                        <img src="{% static 'images/slide/volunteer-selecting-organizing-clothes-donations-charity.jpg '%}" class="carousel-image img-fluid" alt="...">
-                                        
-                                        <div class="carousel-caption d-flex flex-column justify-content-end">
-                                            <h1>Non-profit</h1>
-                                            
-                                            <p>You can support us to grow more</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="carousel-item">
-                                        <img src="{% static 'images/slide/medium-shot-people-collecting-donations.jpg '%}" class="carousel-image img-fluid" alt="...">
-                                        
-                                        <div class="carousel-caption d-flex flex-column justify-content-end">
-                                            <h1>Humanity</h1>
-                                            
-                                            <p>Please tell your friends about our website</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <button class="carousel-control-prev" type="button" data-bs-target="#hero-slide" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-
-                                <button class="carousel-control-next" type="button" data-bs-target="#hero-slide" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
-                            </div>
-                        </div>
-
+                        {% block search %}
+                        <!-- Optional search block (you can add a search form here if necessary) -->
+                        {% endblock %}
                     </div>
                 </div>
             </section>
