--- a/ngo-main/heart_charity/templates/signin.html
+++ b/ngo-main/heart_charity/templates/signin.html
@@ -1,5 +1,8 @@
-<!-- templates/accounts/signin.html -->
+{% extends 'base.html' %} 
+
 {% load static %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -137,3 +140,5 @@ input[type="password"] {
   </div>
 </body>
 </html>
+
+{% endblock %}
