--- a/ngo-main/heart_charity/templates/home.html
+++ b/ngo-main/heart_charity/templates/home.html
@@ -1,32 +1,10 @@
+
+{% extends 'base.html' %} 
+
 {% load static %}
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block content %}
 
-        <meta name="description" content="">
-        <meta name="author" content="">
 
-        <title>Kind Heart Charity</title>
-
-        <!-- CSS FILES -->        
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
-
-        <link href="{% static 'css/templatemo-kind-heart-charity.css' %}" rel="stylesheet">
-<!--
-
-TemplateMo 581 Kind Heart Charity
-
-https://templatemo.com/tm-581-kind-heart-charity
-
--->
-
-    </head>
-    
-    <body id="section_1">
 
         <!-- <header class="site-header">
             <div class="container">
@@ -75,72 +53,58 @@ https://templatemo.com/tm-581-kind-heart-charity
             </div> 
         </header> -->
 
-        <nav class="navbar navbar-expand-lg bg-light shadow-lg">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img src="{% static 'images/logo.png'  %}"  class="logo img-fluid" alt="Kind Heart Charity">
-                    <span>
-                        Kind Heart Charity
-                        <small>Non-profit Organization</small>
-                    </span>
-                </a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#top">Home</a>
-                        </li> -->
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Causes</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Volunteer</a>
-                        </li>
-
-                        <li class="nav-item ms-3">
-                            <a class="nav-link custom-btn custom-border-btn btn" href="#section_3">Donate</a>
-                        </li>
-                        
-                        <li class="nav-item ms-3">
-                            <a class="nav-link custom-btn custom-border-btn btn" href="{% url 'signin' %}">Logout</a>
-                        </li>
-
-
-                        
-                        {% else %}
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">About</a>
-                        </li>
-
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_6">Contact</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'signin' %}">Sign In</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
-                        {% endif %}
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
         <main>
 
             <section class="hero-section hero-section-full-height">
                 <div class="container-fluid">
                     <div class="row">
 
-                        {% block search %}
-                        <!-- Optional search block (you can add a search form here if necessary) -->
-                        {% endblock %}
+                        <div class="col-lg-12 col-12 p-0">
+                            <div id="hero-slide" class="carousel carousel-fade slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="{% static 'images/slide/volunteer-helping-with-donation-box.jpg' %} " class="carousel-image img-fluid" alt="...">
+                                        
+                                        <div class="carousel-caption d-flex flex-column justify-content-end">
+                                            <h1>be a Kind Heart</h1>
+                                            
+                                            <p>Kind heart charity non-profit organization</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="{% static 'images/slide/volunteer-selecting-organizing-clothes-donations-charity.jpg' %}" class="carousel-image img-fluid" alt="...">
+                                        
+                                        <div class="carousel-caption d-flex flex-column justify-content-end">
+                                            <h1>Non-profit</h1>
+                                            
+                                            <p>You can support us to grow more</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="{% static 'images/slide/medium-shot-people-collecting-donations.jpg' %}" class="carousel-image img-fluid" alt="...">
+                                        
+                                        <div class="carousel-caption d-flex flex-column justify-content-end">
+                                            <h1>Humanity</h1>
+                                            
+                                            <p>Please tell your friends about our website</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button class="carousel-control-prev" type="button" data-bs-target="#hero-slide" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+
+                                <button class="carousel-control-next" type="button" data-bs-target="#hero-slide" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
@@ -322,49 +286,6 @@ https://templatemo.com/tm-581-kind-heart-charity
             </section>
 
 
-            <section class="section-padding" id="section_3">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-12 col-12 text-center mb-4">
-                            <h2>Our Causes</h2>
-                        </div>
-
-                        {% for cause in causes %}
-                        <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
-                            <div class="custom-block-wrap">
-                                <img src="{{cause.img.url}}" class="custom-block-image img-fluid" alt="">
-
-                                <div class="custom-block">
-                                    <div class="custom-block-body">
-                                        <h5 class="mb-3">{{cause.name}}</h5>
-
-                                        <p>{{cause.detail}}</p>
-
-                                        <div class="d-flex align-items-center my-2">
-                                            <p class="mb-0">
-                                                <strong>Raised:</strong>
-                                                ₹ {{cause.raised}}
-                                            </p>
-
-                                            <p class="ms-auto mb-0">
-                                                <strong>Goal:</strong>
-                                                ₹ {{cause.goal}}
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                    <a href="/donate/{{cause.id}}" class="custom-btn btn">Donate now</a>
-                                </div>
-                            </div>
-                        </div>
-                        {% endfor %}
-
-                        
-
-                    </div>
-                </div>
-            </section>
 
             <section class="volunteer-section section-padding" id="section_4">
                 <div class="container">
@@ -556,103 +477,6 @@ https://templatemo.com/tm-581-kind-heart-charity
             </section>
         </main>
 
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-12 mb-4">
-                        <img src="{% static 'images/logo.png' %}" class="logo img-fluid" alt="">
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-12 mb-4">
-                        <h5 class="site-footer-title mb-3">Quick Links</h5>
-
-                        <ul class="footer-menu">
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Our Story</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Newsroom</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Causes</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Become a volunteer</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Partner with us</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-12 mx-auto">
-                        <h5 class="site-footer-title mb-3">Contact Infomation</h5>
-
-                        <p class="text-white d-flex mb-2">
-                            <i class="bi-telephone me-2"></i>
-
-                            <a href="tel: 120-240-9600" class="site-footer-link">
-                                120-240-9600
-                            </a>
-                        </p>
-
-                        <p class="text-white d-flex">
-                            <i class="bi-envelope me-2"></i>
-
-                            <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                donate@charity.org
-                            </a>
-                        </p>
-
-                        <p class="text-white d-flex mt-3">
-                            <i class="bi-geo-alt me-2"></i>
-                            Akershusstranda 20, 0150 Oslo, Norway
-                        </p>
-
-                        <a href="#" class="custom-btn btn mt-3">Get Direction</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="site-footer-bottom">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-6 col-md-7 col-12">
-                            <p class="copyright-text mb-0">Copyright © 2036 <a href="#">Kind Heart</a> Charity Org.
-                        	Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a></p>
-                        </div>
-                        
-                        <div class="col-lg-6 col-md-5 col-12 d-flex justify-content-center align-items-center mx-auto">
-                            <ul class="social-icon">
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-twitter"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-facebook"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-instagram"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-linkedin"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="https://youtube.com/templatemo" class="social-icon-link bi-youtube"></a>
-                                </li>
-                            </ul>
-                        </div>
-                        
-                    </div>
-                </div>
-            </div>
-        </footer>
-
-        <!-- JAVASCRIPT FILES -->
-        <script src="{% static 'js/jquery.min.js'%}"></script>
-        <script src="{% static 'js/bootstrap.min.js'%}"></script>
-        <script src="{% static 'js/jquery.sticky.js'%}"></script>
-        <script src="{% static 'js/click-scroll.js'%}"></script>
-        <script src="{% static 'js/counter.js'%}"></script>
-        <script src="{% static 'js/custom.js'%}"></script>
-
-    </body>
-</html>
+       
+    
+{% endblock %}
